# integrimark

./: .gitignore  MISSION.md  README.md  build-integrimark-pack.js  build-python.js  encrypt.html  index.html  integrimark.html  package-lock.json  package.json  password.html  pyproject.toml  watermark.html
integrimark/: __init__.py  integrimark.pack.html
web/: integrimark.css  integrimark.html  integrimark.js  routing.js
